primitives/api/test/tests/ui/staging_fn_ver_missmatch.stderr
error: Different `cfg_attr` for the trait and the implementation function
  --> tests/ui/staging_fn_ver_missmatch.rs:20:3
   |
20 |         #[cfg_attr(feature = "enable-staging-api", api_version(99))]
   |         ^

error: Trait `cfg_attr` is here
  --> tests/ui/staging_fn_ver_missmatch.rs:15:2
   |
15 |     impl self::Api1<Block> for Runtime {
   |     ^^^^
